--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@focme/create-rsk",
-  "version": "1.0.2",
+  "version": "2.0.0-test-1",
   "description": "a scaffold for react ssr with koa2",
   "main": "./src/index.js",
   "type": "module",
