--- a/template/koa-react-ts/package.json
+++ b/template/koa-react-ts/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "rsk-template",
+  "name": "project-name",
   "version": "0.0.1",
-  "description": "react ssr with koa",
-  "main": "index.js",
-  "author": "focme",
+  "description": "project-description",
+  "author": "project-author",
   "license": "MIT",
   "scripts": {
     "start": "node ./script/build.js client --mode development && nodemon --exec \"node ./script/build.js service --mode development && node ./dist/index.js\"",
