--- a/template/lib-ts/package.json
+++ b/template/lib-ts/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@focme/rsk-util",
-  "version": "1.0.1",
-  "description": "a lib project template with rollup",
+  "name": "project-name",
+  "version": "0.0.1",
+  "description": "project-description",
   "main": "index.js",
-  "author": "focme",
+  "author": "project-author",
   "license": "MIT",
   "private": true,
   "scripts": {
